# jenkins_demo

./: .dockerignore  .gitignore  Dockerfile  Jenkins 多分支流水线配置复盘.md  Jenkinsfile  README.md  main.py  pyproject.toml
tests/: test_e2e.py  test_main.py
