[project]
name = "jenkins-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
]



[[tool.uv.index]]

url = "https://pypi.tuna.tsinghua.edu.cn/simple"

default = true

[dependency-groups]
dev = [
    "allure-pytest>=2.16.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
